<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:text="@string/default_display_text"
        android:textColor="#000000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:rowCount="5"
        android:columnCount="4"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnClear"
            android:text="@string/btn_clear"
            android:layout_width="0dp"
            android:backgroundTint="@color/clear"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="3"
            android:textSize="30sp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:textSize="30sp"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:textSize="30sp"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:backgroundTint="@color/operator_minus"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/btn4"
            android:text="@string/btn_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:textSize="30sp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn5"
            android:text="@string/btn_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:textSize="30sp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn6"
            android:text="@string/btn_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:textSize="30sp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/btnSubtract"
            android:text="@string/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:textSize="30sp"
            android:backgroundTint="@color/operator_minus"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:textSize="30sp"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/btn_7"
            app:iconPadding="10dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:textSize="30sp"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:textSize="30sp"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/btn_9" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/operator_minus"
            android:layout_row="1"
            android:textSize="30sp"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/btn_multiply" />

        <Button
            android:id="@+id/btn0"
            android:text="@string/btn_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/btnEqual"
            android:backgroundTint="@color/operator_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:textSize="30sp"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/btn_equal" />

        <Button
            android:id="@+id/btnDivide"
            android:text="@string/btn_divide"
            android:backgroundTint="@color/operator_minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
